@@ -7,3 +7,8 @@ mtsh_LDADD = $(GTKMM_LIBS)
 mtsh_SOURCES = main.cc misc.cc misc.hh monotone.cc monotone.hh \
 	revdat.cc revdat.hh rev_file_info.cc rev_file_info.hh \
 	rev_file_list.cc rev_file_list.hh
+
+EXTRA_DIST = ChangeLog.txt
+
+ChangeLog.txt:
+	$(srcdir)/ChangeLog > $@
