@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(mtsh, 0.1, BUG-REPORT-ADDRESS)
+AC_INIT(mtsh, 0.1x, BUG-REPORT-ADDRESS)
 AM_INIT_AUTOMAKE
 
 AC_CONFIG_SRCDIR([main.cc])
